# gst-tally

./: .gitignore  README.md  cc_payout.py  config.yaml  fx_payout.py  ledger.py  pp_payout.py  pyproject.toml  tally_launcher.py  tally_price_generator.py  tally_product_prices.csv  tally_products.csv  woo_csv_to_tally_xml.py  woo_sku_to_tally.json
data/: test.xml
