[project]
name = "gst-tally"
version = "0.0.1"
description = "Convert WooCommerce CSV exports to Tally XML format with GST calculations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pyqt5>=5.15.11",
    "pyyaml>=6.0.2",
]

[project.scripts]
gst-tally = "woo_csv_to_tally_xml:main"
gst-tally-gui = "tally_launcher:main"
